# mealplanner

./: Cargo.toml  Dioxus.toml  README.md  package-lock.json  recipes.ron  tailwind.config.js
.github/workflows/: rust.yml
public/: tailwind.css
src/: cli.rs  config.rs  main.rs  page.rs  recipe.rs  recipe_choser.rs  recipe_editor.rs  recipe_list.rs  route.rs  styles.css
