[package]
name = "mealplanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
rand = "0.8.5"
ron = "0.8.1"
serde = { version = "1.0.196", features = ["derive"] }
