[package]
name = "mealplanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
dioxus = "0.4.3"
dioxus-desktop = "0.4.3"
rand = "0.8.5"
ron = "0.8.1"
serde = { version = "1.0.196", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
