[package]
name = "mealplanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
dioxus = "0.4.3"
dioxus-router = "0.4.3"
rand = "0.8.5"
ron = "0.8.1"
serde = { version = "1.0.196", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }

[target.'cfg(any(unix, windows))'.dependencies]
dioxus-desktop = { version = "0.4" }

[target.'cfg(target_family = "wasm")'.dependencies]
dioxus-web = { version = "0.4" }
web-sys = { version = "0.3.64", features = [ "Window" ] }
getrandom = { version = "0.2", features = ["js"] }
